
// PlayState class representing the playing state of the audio player
public class PlayState implements AudioPlayerState {
    private Song song;

    public PlayState(Song song) {
        this.song = song;
    }

    @Override
    public void play() {
        // No action when already playing
    }

    @Override
    public void pause() {
        song.pauseOnCurrentTime();
        // Logic to create the pause state
    }

    @Override
    public void create() {
        // Logic to create the play state
    }
}