
public class Song {
    public void play() {
        // Logic to play the song
    }

    public void pauseOnCurrentTime() {
        // Logic to pause the song at the current time
    }

    public void playFromLastLocation() {
        // Logic to play the song from the last paused location
    }
}